--- a/404.html
+++ b/404.html
@@ -2,10 +2,10 @@
 layout: page
 header-img: "img/404.jpg"
 permalink: "/404.html"
-redirect_to: "baseurl/journal/"
+redirect_to: "baseurl/gallery/"
 ---
 
 <p><h1>Whoops, this page doesn't exist.</p>
-<p>You will be redirected to <a href="{{ site.baseurl }}/journal/">JOURNAL</a> in few seconds.</p></h1>
+<p>You will be redirected to <a href="{{ site.baseurl }}/gallery/">the gallery</a> in few seconds.</p></h1>
 
 </div>
